Fix platform header and remove scrollbar on mega menu.

--- a/public/scss/component/_header.scss
+++ b/public/scss/component/_header.scss
@@ -190,7 +190,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1000 !important;
+  z-index: 999999 !important;
   background-color: #000;
   -webkit-transition: transform 0.3s ease-out, top 0.3s ease-out;
   -o-transition: transform 0.3s ease-out, top 0.3s ease-out;
@@ -224,6 +224,8 @@
   }
 
   .box-nav-ul {
+    overflow: visible !important;
+
     .menu-item {
       position: relative;
 
@@ -590,7 +592,7 @@
   display: block !important;
   visibility: visible !important;
   opacity: 1 !important;
-  z-index: 99999 !important;
+  z-index: 9999999 !important;
   position: fixed !important;
   top: 100px !important;
   left: 0 !important;
@@ -1273,16 +1275,16 @@
   padding: 0 60px;
   display: inline-block;
 
-  &::before,
-  &::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    width: 40px;
-    height: 5px;
-    background-color: var(--primary);
-    transform: translateY(-50%);
-  }
+  // &::before,
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   top: 50%;
+  //   width: 40px;
+  //   height: 5px;
+  //   background-color: var(--primary);
+  //   transform: translateY(-50%);
+  // }
 
   &::before {
     left: 0;
